{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 15,
  "lineage": "b8b15cad-5ab7-e89c-6f10-8f2933ad1086",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_service_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/europe-west1-b/instanceGroups/instance-app-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 10,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-12-15T03:01:55.220-08:00",
            "enable_cdn": false,
            "fingerprint": "sS7sFGQJiJM=",
            "health_checks": [
              "projects/bamboo-mercury-335016/global/healthChecks/instance-app-hc"
            ],
            "id": "projects/bamboo-mercury-335016/global/backendServices/instance-app-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "instance-app-backend",
            "port_name": "http",
            "project": "bamboo-mercury-335016",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/backendServices/instance-app-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.app_hc",
            "google_compute_instance_group_manager.igm_app",
            "google_compute_instance_template.instance_template_app",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_network_eu_west1_subnet",
            "google_service_account.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-15T03:00:54.723-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bamboo-mercury-335016/global/firewalls/vpc-gcs-http-rule",
            "log_config": [],
            "name": "vpc-gcs-http-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/vpc-gcs",
            "priority": 1000,
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/firewalls/vpc-gcs-http-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc_network_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-15T03:00:54.661-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bamboo-mercury-335016/global/firewalls/vpc-gcs-ssh-rule",
            "log_config": [],
            "name": "vpc-gcs-ssh-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/vpc-gcs",
            "priority": 1000,
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/firewalls/vpc-gcs-ssh-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "app-lb-address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "107.178.255.55",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-12-15T03:00:32.497-08:00",
            "id": "projects/bamboo-mercury-335016/global/addresses/instance-app-lb-address",
            "name": "instance-app-lb-address",
            "prefix_length": 0,
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/addresses/instance-app-lb-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "mig-global-forwarding-rule-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/bamboo-mercury-335016/global/forwardingRules/instance-app-forwarding-rule",
            "ip_address": "107.178.255.55",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "instance-app-forwarding-rule",
            "port_range": "80-80",
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/forwardingRules/instance-app-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/targetHttpProxies/instance-app-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service_app",
            "google_compute_global_address.app-lb-address",
            "google_compute_health_check.app_hc",
            "google_compute_instance_group_manager.igm_app",
            "google_compute_instance_template.instance_template_app",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_network_eu_west1_subnet",
            "google_compute_target_http_proxy.http_proxy_app",
            "google_compute_url_map.url_map_app",
            "google_service_account.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/bamboo-mercury-335016/global/networks/vpc-gcs",
            "mtu": 0,
            "name": "vpc-gcs",
            "project": "bamboo-mercury-335016",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/vpc-gcs"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_network_eu_west1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-15T03:00:56.371-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/bamboo-mercury-335016/regions/europe-west1/subnetworks/europe-west1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "europe-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/vpc-gcs",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "bamboo-mercury-335016",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-west1/subnetworks/europe-west1"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-15T03:02:29.230-08:00",
            "id": "projects/bamboo-mercury-335016/global/targetHttpProxies/instance-app-proxy",
            "name": "instance-app-proxy",
            "project": "bamboo-mercury-335016",
            "proxy_bind": false,
            "proxy_id": 6552527514438497706,
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/targetHttpProxies/instance-app-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/urlMaps/instance-app-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.backend_service_app",
            "google_compute_health_check.app_hc",
            "google_compute_instance_group_manager.igm_app",
            "google_compute_instance_template.instance_template_app",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_network_eu_west1_subnet",
            "google_compute_url_map.url_map_app",
            "google_service_account.account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-15T03:02:17.510-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/backendServices/instance-app-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "BFBpyesWZc0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/bamboo-mercury-335016/global/urlMaps/instance-app-url-map",
            "map_id": 1807654199384896982,
            "name": "instance-app-url-map",
            "path_matcher": [],
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/urlMaps/instance-app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend_service_app",
            "google_compute_health_check.app_hc",
            "google_compute_instance_group_manager.igm_app",
            "google_compute_instance_template.instance_template_app",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.vpc_network_eu_west1_subnet",
            "google_service_account.account"
          ]
        }
      ]
    }
  ]
}